# firecracker

./: .gitignore  CHANGELOG.md  get_baselines.py  output  parse_results.py  parse_results.sh  parsed_results  process_results.sh  pytest_out  pytest_out_new  pytest_out_new_2  results.json  run.sh  run_100.sh
docs/: design.md  prod-host-setup.md  seccomp.md  seccompiler.md
resources/seccomp/: unimplemented.json  x86_64-unknown-linux-musl.json
src/api_server/src/: lib.rs
src/api_server/swagger/: firecracker.yaml
src/firecracker/src/: api_server_adapter.rs  main.rs
src/rate_limiter/src/: lib.rs
src/seccomp/: Cargo.toml
src/seccomp/src/: bin.rs  compiler.rs  lib.rs  parser.rs  seccompiler.rs  syscall_table.rs
src/seccomp/src/syscall_table/: mod.rs
src/vm-memory/: Cargo.toml
src/vm-memory/src/: lib.rs
src/vmm/: Cargo.toml
src/vmm/benches/: bpf_compilation.rs
src/vmm/src/: builder.rs  lib.rs  memory_snapshot.rs  persist.rs  rpc_interface.rs  signal_handler.rs
src/vmm/tests/: integration_tests.rs
tests/: pytest.ini
tests/framework/: artifacts.py  defs.py  microvm.py  resources.py  utils.py  utils_vsock.py
tests/host_tools/: cargo_build.py  network.py
tests/integration_tests/functional/: test_drives.py  test_vsock.py  test_vsock_rate_limiter.py
tests/integration_tests/performance/: test_blk_performance.py  test_memory.py  test_network_tcp_throughput.py  test_process_startup_time.py  test_vsock_throughput.py  vsock_throughput_test_config.py
tools/: devtool  shielded_test.py
tools/devctr/: Dockerfile.x86_64
tools/parse_baselines/: main.py
(+17 files in other folders)
