[package]
name = "seccomp"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"

[[bin]]
name = "seccompiler"
path = "src/bin.rs"

[dependencies]
libc = ">=0.2.39"
utils = { path = "../utils" }
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
bincode = "1.2.1"
